:sparkles: add link to github

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image" href="favicon.ico">
 <body>
     <h1>Practicando - JavaScript - Siigo QA</h1>
+    <p><a href="https://github.com/Pythonesa/siigoJSQA">Puedes ver el código en GitHub</a></p>
     <div id="pptls">
         <h2>Piedra, Papel, Tijera, Lagarto, Spock</h2>
         <p>Uso de funciones, array, random, switch e if</p>
