:sprakles: add hangman

--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
         <p>Uso de objetos</p>
         <p><a href="lor.html">Juega a El señor de los anillos</a></p>
     </div>
+    <div id="hangman">
+        <h2>Ahorcado</h2>
+        <p>Uso de expresiones regulares</p>
+        <p><a href="hangman.html">Juega al ahorcado</a></p>
+    </div>
 </body>
 </html>
